syntax = "proto3";

// cd ..
//protoc --proto_path=. --go_out=. --go_opt=paths=source_relative sn_account/*.proto

package sn_account;
//option go_package = ".;sn_account";
option go_package = "github.com/yaruz/app/internal/app/proto/sn_account";

import "google/protobuf/timestamp.proto";


message SNAccount {
  uint64  ID                           = 1;
  uint64  TypeID                       = 2;
  string  SNID                         = 3;
  google.protobuf.Timestamp CreatedAt  = 4;
}



