syntax = "proto3";

// protoc --go_out=. *.proto

package proto;
option go_package = ".;proto";

import "user.proto";
import "sn_account.proto";
import "account.proto";
import "token.proto";


message Session {
  User                User            = 1;
  AccountSettings     AccountSettings = 2;
  repeated SNAccount  SNAccounts      = 3;
  JwtClaims           JwtClaims       = 4;
  Token               Token           = 5;
}

